--- a/front/index.html
+++ b/front/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>E Store</title>
-    <link rel="stylesheet" href="bulma.min.css">
+  <meta charset="utf-8">
+  <title>E Store</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 <body>
-<div id="root"></div>
+  <div id="root"></div>
 </body>
 </html>
